# Fast-API

./: .gitignore  main.py  pyproject.toml
api/: courses.py  users.py
