[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["joshuaosoro <joshuaosoro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = "^0.115.3"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
